--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,29 @@
+version: '3.8'
+
 services:
+  db:
+    image: postgres:15-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=portfolio_db
+    ports:
+      - "5441:5432"
+    networks:
+      - portfolio-network
+    restart: always
+
   backend:
     build: ./backend
     ports:
-      - "8000:8000"
+      - "8002:8000"
     environment:
       - PORT=8000
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/portfolio_db
+    depends_on:
+      - db
     networks:
       - portfolio-network
 
@@ -14,7 +33,7 @@ services:
       args:
         - VITE_API_URL=
     ports:
-      - "80:80"
+      - "8082:80"
     depends_on:
       - backend
     networks:
@@ -23,3 +42,6 @@ services:
 networks:
   portfolio-network:
     driver: bridge
+
+volumes:
+  postgres_data:
